# ai-agent-with-forms

backend/: .gitignore  README.md  pyproject.toml
backend/src/: controller.py  main.py
backend/src/forms/model/: fields.py  human_input.py
backend/src/graphs/: graph_helpers.py  simple_agent.py
backend/src/model/: chat_model.py
frontend/: .claude  .gitignore  CLAUDE.md  package.json  pnpm-lock.yaml
frontend/app/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/lib/: chat-api.ts
frontend/app/lib/types/: chat.ts
frontend/app/ui/chat/: chat-container.tsx  chat-window.tsx  datepicker-custom.css  field-input.tsx  loading-indicator.tsx  message.tsx
