[project]
name = "ai-agent-with-forms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.120.4",
    "langchain>=1.0.3",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.2",
    "rich>=14.2.0",
]


#[tool.uv]
#extra-index-url = ["https://test.pypi.org/simple"]